--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "webkit-sassui-tips",
-  "version": "0.0.0",
-  "description": "Webkit sass for tips",
-  "homepage": "https://github.com/afeiship/webkit-sassui-tips",
+  "name": "@jswork/wsui-tips",
+  "version": "1.0.0",
+  "description": "Webkit sass for tips.",
+  "homepage": "https://github.com/afeiship/wsui-tips",
   "author": {
     "name": "afei",
     "email": "1290657123@qq.com"
   },
   "scripts": {
-    "build": "gulp"
+    "build": "gulp",
+    "start": "gulp docs && serve docs",
+    "release": "release-it"
   },
-  "main": "dist/webkit-sassui-tips.scss",
+  "main": "dist/index.scss",
   "license": "MIT",
   "devDependencies": {
-    "del": "^2.2.1",
-    "gulp": "^3.9.1",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "yargs": "^4.7.1"
+    "@jswork/gulp-pkg-header": "^1.0.3",
+    "autoprefixer": "^10.0.2",
+    "del": "^6.0.0",
+    "express": "^4.17.1",
+    "gulp": "^4.0.2",
+    "gulp-load-plugins": "^2.0.5",
+    "gulp-postcss": "^9.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "postcss": "^8.1.10",
+    "release-it": "^14.2.1"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
